# fdt

./: .gitignore  CMakeLists.txt  README.md
examples/: memcpy.cpp  memcpy_fixed_structs.cpp  memset.cpp
examples/conversion/: memset.cpp
examples/conversion/aos2soa/: lists_arrow.cpp  naive_arrow.cpp  naive_raw_static.cpp  primitive_arrow.cpp  primitive_static.cpp  strings_arrow.cpp
examples/conversion/generated_tests/: long_generator.sh  runner.sh  wide_generator.sh
examples/conversion/generated_tests/aos2soa/: arrow_generator.py  static_generator.py
examples/conversion/generated_tests/soa2aos/: arrow_generator.py  naive_arrow.cpp  static_generator.py
examples/conversion/soa2aos/: lists_arrow.cpp  naive_arrow.cpp  naive_raw_static.cpp  primitive_arrow.cpp  primitive_static.cpp  strings_arrow.cpp
examples/data_process/: column.cpp  row.cpp
examples/load_tests/aos2soa/: lists_arrow.cpp  strings_arrow.cpp
examples/load_tests/generated_tests/: long_generator.sh  runner.sh
examples/load_tests/generated_tests/aos2soa/: arrow_generator.py  static_generator.py
examples/load_tests/generated_tests/soa2aos/: arrow_generator.py  static_generator.py
examples/load_tests/soa2aos/: lists_arrow.cpp  strings_arrow.cpp
examples/simple/: memcpy.cpp  memcpy_fixed_structs.cpp  memset.cpp  naive_arrow.cpp  naive_raw_transpose.cpp
examples/simple/aos2soa/: naive_arrow.cpp
examples/simple/soa2aos/: naive_arrow.cpp  naive_raw_transpose.cpp
lib/include/: aos.h  aos2soa.h  arrow_transpose.h  forward.h  pretty_type_traits.h  raw_transpose.h  soa.h  soa2aos.h  utility.h
lib/include/aos/: aos.h
lib/include/aos/buffer/: buffer.h  primitive_buffers_wrapper.h
lib/include/aos/types/: comparator.h  list.h  string.h
lib/include/conversion/: aos2soa.h  soa2aos.h
lib/include/conversion/dispatch/: aos2soa.h  soa2aos.h
lib/include/conversion/list/: aos2soa.h  soa2aos.h
lib/include/conversion/primitive/: aos2soa.h  soa2aos.h
lib/include/conversion/string/: aos2soa.h  soa2aos.h
lib/include/experimental/: raw_transpose.h
lib/include/raw_static/: aos2soa.h  soa2aos.h  soa_field.h
lib/include/simd/: load_lanes.h  memcpy.h  store_lanes.h
lib/src/aos/: aos.cpp  list.cpp  string.cpp
src/: main.cpp
